<resources>
    <string name="app_name">AuctionHunter</string>

    <string name="cat_add">Add</string>
    <string name="cat_edit">Edit</string>
    <string name="cat_remove">Remove</string>
    <string name="search_title">Search</string>
    <string name="sort">Sortowanie</string>
    <string name="malejaco">Malejąco</string>
    <string name="rosnaco">Rosnąco</string>
    <string name="ceny">prices:</string>
    <string name="cena_z_dostawa">ceny z dostawą:</string>
    <string name="czas_do_konca">czasu do końca:</string>
    <string name="odAdoZ">from A to Z</string>
    <string name="odZdoA">from Z to A</string>
    <string name="anuluj">Cancel</string>
    <!-- przedmiot list view -->
    <string name="item_cena_kupteraz">Buy Now</string>
    <string name="item_cena_z_dostawa">z dostawą</string>
    <!-- navigation bar -->
    <string name="dodaj_cel">Add target</string>
    <!-- dialog logowanie -->
    <string name="ladowanie">Loading</string>
    <string name="ladowanie2">Loading...</string>
    <string name="brak_wynikow">No results</string>
    <string name="pelny_opis">Full describe</string>
    <string name="licytuj">Make offer</string>
    <string name="kup_teraz">Buy It Now</string>
    <string name="cena_kup_teraz">Price Buy It Now</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- dialog messages -->
    <string name="dialog_message_remove_target">Are you sure?</string>
    <string name="dialog_title_remove_target">Remove target</string>
    <string name="dialog_title_sort_type_target">Sort type</string>
    <string name="dialog_title_sort_order_target">Sort order</string>
    <string name="dialog_title_download_cats">Downloading categories</string>

    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_cancel_button">Cancel</string>

    <string name="currency_name">zł</string>
    <string name="ALLEGRO_URL_ITEM">http://allegro.pl/show_item.php?item=</string>

    <!-- SHARED PREFERENCES -->

    <!-- PREFERENCES -->
    <string name="preferences_searching_interval">Searching interval</string>
    <string name="preferences_night_mode">Night mode</string>
    <string name="preferences_sound">Sound</string>
    <string name="preferences_select_sound">Select sound</string>
    <string name="preferences_vibration">Vibration</string>
    <string name="preferences_searching">Searching</string>
    <string name="preferences_notification">Notification</string>
    <string name="preferences_other">Other</string>
    <string name="preferences_update_cats">Update categories tree</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_activity_no_data">No results</string>
    <string name="main_activity_add_new_target">Add target to see results</string>
    <string name="main_activity_select_target">Select target</string>
    <string name="main_activity_error">Error. Try again after some time.</string>

    <!-- ADD NEW TARGET ACTIVITY -->
    <string name="new_target_select_category">Select category</string>
    <string name="new_target_target_name">Target name</string>
    <string name="new_target_target_min" translatable="false">MIN</string>
    <string name="new_target_target_max" translatable="false">MAX</string>
    <string name="new_target_save">Save</string>
    <string name="new_target_filters_info">Select category to show available filters</string>
    <string name="new_target_message_select_category">Select category</string>
    <string name="new_target_message_enter_target_name">Enter target name</string>
    <string name="new_target_message_enter_searching_name">Enter searching name</string>

    <!-- ACTIVITY TITLE-->
    <string name="activity_new_target_title">New target</string>
    <string name="new_target_searching_name">Searching name</string>
    <string name="new_target_no_filters_info">No filters available at this category</string>

    <!-- NOTIFICATION-->
    <string name="notification_channel_name">Default notification channel</string>
    <string name="foreground_notification_title">Searching for new auctions...</string>
    <string name="foreground_notification_text">Last scan time: %1$s</string>


</resources>
