<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cel_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/cel_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/cat_add"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/cel_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/cat_edit"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/cel_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/cat_remove"
        android:visible="false"
        app:showAsAction="collapseActionView" />
</menu>
